<resources>
    <string name="app_name">PalliativeCare</string>

    <!-- stf    -->
    <string name="stfButtonText">Retry</string>
    <string name="stfEmptyMessage">There are no items</string>
    <string name="stfErrorMessage">An error occurred please try again later</string>
    <string name="stfLoadingMessage">Loading..</string>
    <string name="stfLocationOffMessage">Please enable location services</string>
    <string name="stfOfflineMessage">Please check your connection</string>


    <!-- base Strings  -->
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="alert">alert</string>
    <string name="please_wait">please_wait</string>
    <string name="hide">hide</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- bottom nav menu   -->
    <string name="posts">posts</string>
    <string name="chats">chats</string>
    <string name="categories">categories</string>
    <string name="interests">interests</string>
    <string name="settings">settings</string>

    <!-- errors messages   -->
    <string name="terms_error_message">You must agree to the privacy policy</string>
    <string name="error">Something went wrong!</string>
    <string name="password_not_match">Password does not match</string>
    <string name="back_exit">Press again to exit.</string>
    <string name="invalid_field">This field cannot be left blank</string>
    <string name="invalid_email">Please enter a correct email</string>
    <string name="invalid_pin_code">The code must consist of 6 digits</string>
    <string name="invalid_password">Password must be longer than 6 characters</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <!-- messages   -->
    <string name="add_category_successfully">New topic has been added successfully</string>
    <string name="edit_category_successfully">the topic has been edited successfully</string>
    <string name="add_post_successfully">New Post has been added successfully</string>
    <string name="edit_post_successfully">the post has been edited successfully</string>
    <string name="remove_message">Are you sure to delete?</string>
    <string name="remove_category_successfully">the topic has been deleted successfully</string>
    <string name="remove_post_successfully">the topic has been deleted successfully</string>

    <!-- auth    -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="father_name">Father Name</string>
    <string name="family_name">Family Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="account_type">Account type</string>
    <string name="welcome">Welcome to the application\nPalliative care</string>

    <string name="you_do_not_have_account">You do not have account?</string>
    <string name="agree_terms">Agree terms?</string>
    <string name="registration_terms">Registration terms</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="search">Search</string>
    <string name="subscribe">Subscribe</string>
    <string name="un_subscribe">Un subscribe</string>
    <string name="un_subscribe_group">Group un subscribed</string>
    <string name="subscribe_group">Group subscribed</string>
    <string name="message_doctor">Message doctor</string>

    <string name="post_details">Post details</string>
    <string name="posts_">Posts</string>

    <!-- Add category   -->
    <string name="add_new_category">Add New Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="category_title">Category Title</string>
    <string name="category_description">Category Description</string>
    <!-- Add Post   -->
    <string name="add_new_post">Add New Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="doctor_name">Doctor Name</string>
    <!-- Setting    -->
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure to sign out?</string>
    <string name="save">Save</string>
    <string name="online">online</string>
    <string name="write_here">write here</string>
    <string name="upload_file">Upload File</string>
    <string name="contains_attachment">Contains an attachment</string>

</resources>