<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.auth.RegisterActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_appbar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/first_name"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="32"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_father_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/father_name"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/father_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="32"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_family_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/family_name"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/family_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="32"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_birth_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/date_of_birth"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="datetime"
                    android:lines="1"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/address"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="text"
                    android:lines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/phone"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="10"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/email"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLength="32"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/password"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="32"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/confirm_password"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="32"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_account_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/account_type"
                app:boxStrokeColor="@color/hint_color"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/agree_terms"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:paddingHorizontal="6dp"
                    android:text="@string/registration_terms"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/termsError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/terms_error_message"
                android:textColor="@color/red"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_primary_30"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>