<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.doctor.AddCategoryActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_appbar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/category_title"
                app:boxStrokeColor="@color/primary"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:inputType="text"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/category_description"
                app:boxStrokeColor="@color/primary"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cairo_medium"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_primary_30"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_primary_30"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/remove"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@color/red" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>